[workspace]
members = ["jam-primitives", "jamers"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Shifting Pigeon <contact@shiftingpigeon.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Shifting-Pigeon/jam-rs"
homepage = "https://github.com/Shifting-Pigeon/jam-rs"
#documentation = "https://docs.rs/jam-rs"
readme = "README.md"
keywords = ["jam"]
categories = ["web3"]

[workspace.dependencies]
#Crypto
blake3 = "1.5"
ed25519-dalek = "2.0"
k256 = "0.13"
rand = "0.8"
rand_core ="0.6"

#Codecs and serializers
parity-scale-codec = "3.7.5"
serde = "1"

#Misc
anyhow = "1"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
split-debuginfo = "packed"
debug-assertions = false
overflow-checks = false
lto = "thin"
panic = "unwind"
incremental = false
codegen-units = 1
rpath = false
