[package]
name = "jam-primitives"
version = "0.1.0"
edition = "2024"
description = "JAM protocol primitives"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.98"
blake3.workspace = true
ed25519-dalek = { workspace = true, features = ["rand_core"] }
parity-scale-codec = { workspace = true, features = ["derive"] }
